# ImageAnalysis

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/image_analysis/cli/: main.py
src/image_analysis/core/: runner.py  types.py
src/image_analysis/data/: loaders.py  puzzle.py
src/image_analysis/demo/: app.py
src/image_analysis/eval/: metrics.py  visuals.py
src/image_analysis/features/: extract.py
src/image_analysis/modeling/: compatibility.py
src/image_analysis/solver/: reconstruct.py
src/image_analysis/utils/: image_ops.py  io.py
tests/: test_metrics_and_solver.py  test_runner.py  test_smoke.py
