[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analysis-jigsaw"
version = "0.1.0"
description = "Lost in Pieces: image jigsaw reconstruction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "scikit-image>=0.22",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.8",
  "streamlit>=1.35"
]

[project.scripts]
image-analysis = "image_analysis.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
